WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286908
[CoordinatedGraphics] Force repaint should not flush layers when still waiting for renderer
https://bugs.webkit.org/show_bug.cgi?id=286908
Summary
[CoordinatedGraphics] Force repaint should not flush layers when still waitin...
Carlos Garcia Campos
Reported
2025-02-03 01:58:39 PST
Force repaint should also check waiting for rendering flag, and wait until current composition is done.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-02-03 02:00:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39898
EWS
Comment 2
2025-02-03 06:33:49 PST
Committed
289732@main
(83b17af25976): <
https://commits.webkit.org/289732@main
> Reviewed commits have been landed. Closing PR #39898 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug