[CoordinatedGraphics] Force repaint should not flush layers when still waiting for renderer https://bugs.webkit.org/show_bug.cgi?id=286908

Reviewed by Miguel Gomez.

Force repaint should also check waiting for rendering flag, and wait until current composition is done.

* LayoutTests/platform/glib/printing/print-with-media-query-destory-expected.txt: Removed.
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::forceRepaint):
(WebKit::LayerTreeHost::forceRepaintAsync):
(WebKit::LayerTreeHost::sizeDidChange):
(WebKit::LayerTreeHost::didComposite):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:

Canonical link: https://commits.webkit.org/289732@main