Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h
@@ -184,6 +184,7 @@ private:
     bool m_layerTreeStateIsFrozen { false };
     bool m_isPurgingBackingStores { false };
     bool m_pendingResize { false };
+    bool m_pendingForceRepaint { false };
     bool m_isSuspended { false };
     bool m_isWaitingForRenderer { false };
     bool m_scheduledWhileWaitingForRenderer { false };
@@ -197,7 +198,7 @@ private:
     struct {
         CompletionHandler<void()> callback;
 #if HAVE(DISPLAY_LINK)
-        uint32_t compositionRequestID { 0 };
+        std::optional<uint32_t> compositionRequestID;
 #else
         bool needsFreshFlush { false };
 #endif
